<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Groupay</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_event_list">EventListActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_item_info">ItemInfoActivity</string>
    <string name="title_activity_item_vote">ItemVoteActivity</string>

    <string name="action_create_event">Create Event</string>
    <string name="action_delete_event">Delete Event</string>
    <string name="action_propose_item">Propose Item</string>
    <string name="action_add_suggestion">Add Suggestion</string>
    <string name="action_cast_vote">Cast Your Vote</string>


    <string name="sign_in">Sign In</string>
    <string name="sign_in_name">Username</string>
    <string name="sign_in_password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter</string>

    <string name="my_event">My Event</string>
    <string name="open_event">Open Event</string>
    <string name="event_list">Event List</string>
    <string name="event_image">Event Image</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>

    <string name="this_is_an_open_event">This is an open event</string>

    <string name="select_delete_event">Select Delete Event</string>

    <string name="enter_item_name">Enter New Item</string>
    <string name="identity_is_not_being_recognized">Username/Password is not recognized</string>
    <string name="would_you_take_ownership">Would you like to take the ownership?</string>
    <string name="have_you_bought">Have you bought it yet?</string>
    <string name="item_info">Item Information</string>
    <string name="item_quantity">How many are we going to get?</string>

    <string name="who_has_permission">How should this item to be decided where to get?</string>
    <string name="vote_by_group">Vote By Group</string>
    <string name="member_decide">Any Member decide</string>

    <string name="item_tab_name">Item</string>
    <string name="member_tab_name">Member</string>
    <string name="notification_tab_name">Notification</string>
    <string name="item">Item</string>
    <string name="price">Price</string>
    <string name="store">Store</string>
    <string name="receipt">Receipt</string>
    <string name="description">Description</string>
    <string name="store_name">Store Name/Link</string>
    <string name="receipt_image">Receipt Image</string>
    <string name="member_who_bought">Bought by</string>
    <string name="request_for_approval">Request additional proof?</string>
    <string name="vote_for_option">Vote for an item</string>

    <string name="mark_event_done">Should this event mark as done?</string>
    <string name="would_you_delete_notify">Would you like to delete this notification?</string>
    <string name="you_owe_money">You owe money</string>
    <string name="would_like_to_join">Would you like to join this event?</string>



    <string name="hello_world">Hello world!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
