<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/item_quantity"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/item_quantity_text"
        android:layout_height="wrap_content"
        android:layout_width="80dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/material_blue_grey_800"
        android:textSize="15sp"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/who_has_permission"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="20dp">
        <RadioButton
            android:id="@+id/member_radio_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="20dip"
            android:text="@string/member_decide"
            android:textColor="@color/material_blue_grey_800"
            android:textSize="15dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="20dp">
        <RadioButton
            android:id="@+id/group_radio_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="20dip"
            android:text="@string/vote_by_group"
            android:textColor="@color/material_blue_grey_800"
            android:textSize="15dp"
            />
    </LinearLayout>

</LinearLayout>