<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="15dp">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/price"
            android:textColor="@color/material_blue_grey_800"
            android:textSize="20sp"
            android:layout_gravity="center" />
        <EditText
            android:id ="@+id/price_edit_text"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:inputType="number|numberDecimal"
            android:textSize="20sp"/>
    </LinearLayout>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="20dip"
        android:text="@string/store_name"
        android:textColor="@color/material_blue_grey_800"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/store_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dip"
        android:textSize="20sp"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="20dip"
        android:text="@string/description"
        android:textColor="@color/material_blue_grey_800"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/describe_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dip"
        android:textSize="20sp"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/item_receipt_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:text="@string/receipt"
        android:paddingTop="20dp"
        android:paddingBottom="15dp"
        android:textColor="@color/material_blue_grey_800"
        />
    <ImageButton
        android:id="@+id/item_receipt_image"
        android:padding="15dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"/>

</LinearLayout>
