<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:text="@string/item"
            android:textColor="@color/material_blue_grey_800"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/name_text"
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:text="@string/price"
            android:textColor="@color/material_blue_grey_800"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/price_text"
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:text="@string/store"
            android:textColor="@color/material_blue_grey_800"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/store_text"
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/bought_by_text"
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:text="@string/member_who_bought"
            android:textColor="@color/material_blue_grey_800"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/member_text"
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20dp"
            android:paddingLeft="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:text="@string/description"
            android:textColor="@color/material_blue_grey_800"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/describe_text"
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20dp"
            android:paddingLeft="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/reciptLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:text="@string/receipt"
            android:textColor="@color/material_blue_grey_800"
            android:textSize="20dp"/>
        <ImageView
            android:id="@+id/receipt_image"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:paddingLeft="20dp"/>
    </LinearLayout>

</LinearLayout>