<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor_white"
    tools:context="com.cmpe277.groupay.SignInActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <include layout="@layout/tool_bar" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sign_in_name"
            android:textColor="@color/themeColor_gray"
            android:paddingTop="10dip"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/user_name_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="20dip"
            android:paddingLeft="30dip"
            android:paddingRight="30dip"
            android:textSize="20dp" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="20dip"
            android:text="@string/sign_in_password"
            android:textColor="@color/themeColor_gray"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/password_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="20dip"
            android:paddingLeft="30dip"
            android:paddingRight="30dip"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingBottom="10dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel_button"
            android:layout_gravity="right"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:id="@+id/signin_button"
            android:layout_gravity="right"
            android:layout_weight="1"/>
        </LinearLayout>


</RelativeLayout>
