<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:text="@string/event_image"
            android:textColor="@color/material_blue_grey_800"
            android:textSize="20dp" />
        <ImageButton
            android:id="@+id/event_icon_selector"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:scaleType="fitCenter"
            android:cropToPadding="false"
            android:background="@null"
            android:layout_weight="0.54" />
    </LinearLayout>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="20dip"
        android:text="@string/event_name"
        android:textColor="@color/material_blue_grey_800"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/new_event_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="20dip"
        android:paddingLeft="30dip"
        android:paddingRight="30dip"
        android:textSize="20dp"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dip"
        android:orientation="horizontal">
        <TextView
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:paddingRight="20dip"
            android:text="@string/event_date"
            android:textColor="@color/material_blue_grey_800"
            android:textSize="20dp"
            />

        <EditText
            android:id="@+id/new_event_edit_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:editable="false"
            android:clickable="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="20dp">
        <CheckBox
            android:id="@+id/open_check_box"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="20dip"
            android:text="@string/this_is_an_open_event"
            android:textColor="@color/material_blue_grey_800"
            android:textSize="20sp"
            />
    </LinearLayout>
</LinearLayout>